# sidequest-api

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  SOUL.md  TECH_DEBT.md  package.json  rustfmt.toml  sidequest-api
crates/sidequest-agents/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-agents/src/: agent.rs  client.rs  context_builder.rs  continuity_validator.rs  entity_reference.rs  exercise_tracker.rs  extractor.rs  footnotes.rs  format_helpers.rs  inventory_extractor.rs  lib.rs  lore_filter.rs  orchestrator.rs  patch_legality.rs  patches.rs  preprocessor.rs  trope_alignment.rs  turn_record.rs
crates/sidequest-agents/tests/: abilities_wiring_story_15_15_tests.rs  ability_perception_story_9_2_tests.rs  action_rewrite_flags_wiring_story_37_11_tests.rs  agent_impl_story_1_11_tests.rs  agent_infra.rs  agent_infrastructure_tests.rs  assemble_turn_story_20_1_tests.rs  assemble_turn_wiring_story_20_9_tests.rs  combat_false_positives_story_15_6_tests.rs  combat_pipeline_story_15_6_tests.rs  combat_tactical.rs  creature_smith_beat_selection_story_28_6_tests.rs  dump_env.sh  eliminate_json_story_20_8_tests.rs  entity_reference_story_3_4_tests.rs  entity_validation.rs  execution_story_2_6_tests.rs  exercise_tracker_story_3_5_tests.rs  genre_identity_injection_tests.rs  intent_classification_story_5_9_tests.rs  inventory_extraction_crash_story_37_10_tests.rs  inventory_extraction_pickup_story_37_3_tests.rs  item_acquire_story_20_11_tests.rs  item_inventory.rs  knowledge_context_story_9_4_tests.rs  lore_filter_story_23_4_tests.rs  lore_mark_story_20_13_tests.rs  merchant_transact_story_20_12_tests.rs  merchant_wiring_story_15_16_tests.rs  narrator_behavior.rs  narrator_context_outcomes_34_9.rs  narrator_footnotes_story_9_11_tests.rs  narrator_knowledge_story_9_4_tests.rs  narrator_ocean_story_10_4_tests.rs  narrator_outcome_injection_story_34_9_tests.rs  narrator_prompt.rs  narrator_prompt_template_story_23_1_tests.rs  narrator_resource_story_16_1_tests.rs  narrator_session_reset_story_30_2_tests.rs  narrator_verbosity_story_14_3_tests.rs  (+28 more)
crates/sidequest-daemon-client/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-daemon-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/sidequest-daemon-client/tests/: embed_error_handling_story_37_5_tests.rs  embed_story_15_7_tests.rs  error_handling.rs  lora_render_params_story_35_15_tests.rs  request_serialization.rs  response_parsing.rs
crates/sidequest-encountergen/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-encountergen/src/: main.rs
crates/sidequest-fixture/: Cargo.toml
crates/sidequest-fixture/src/: error.rs  hydrate.rs  lib.rs  schema.rs
crates/sidequest-fixture/tests/: scene_harness_wiring.rs
crates/sidequest-game/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-game/examples/: tension_fixture_export.rs
crates/sidequest-game/src/: ability.rs  accusation.rs  achievement.rs  advancement.rs  affinity.rs  audio_mixer.rs  axis.rs  barrier.rs  beat_filter.rs  belief_state.rs  builder.rs  catch_up.rs  character.rs  chase.rs  chase_depth.rs  clue_activation.rs  combat.rs  combatant.rs  commands.rs  conlang.rs  consequence.rs  continuity.rs  creature_core.rs  delta.rs  dice.rs  disposition.rs  encounter.rs  engagement.rs  faction_agenda.rs  gossip.rs  guest_npc.rs  hp.rs  inventory.rs  journal.rs  known_fact.rs  lib.rs  lore.rs  merchant.rs  monster_manual.rs  multiplayer.rs  (+42 more)
crates/sidequest-game/tests/: abilities_wiring_story_15_15_tests.rs  ability_story_9_1_tests.rs  accusation_story_7_4_tests.rs  achievement_wiring_story_15_13_tests.rs  adaptive_story_8_3_tests.rs  agreeableness_disposition_story_10_7_tests.rs  backstory_tables_story_31_2_tests.rs  barrier_error_handling_story_13_10_tests.rs  barrier_resolution_story_13_8_tests.rs  barrier_story_8_2_tests.rs  barrier_timeout_story_13_9_tests.rs  beat_filter_story_4_3_tests.rs  belief_state_story_7_1_tests.rs  builder_story_2_3_tests.rs  catch_up_story_8_8_tests.rs  character_name_story_30_1_tests.rs  character_provenance.rs  chase_as_confrontation_story_16_5_tests.rs  cinematic_variation_story_12_1_tests.rs  clue_activation_story_7_3_tests.rs  combat_as_confrontation_story_16_4_tests.rs  combat_classification_story_5_2_tests.rs  combat_engine_story_15_6_tests.rs  combat_event_story_5_2_tests.rs  combat_wiring_story_15_6_tests.rs  consumable_depletion_story_19_5_tests.rs  content_audit_story_16_16_tests.rs  defense_scaling_story_15_21_tests.rs  delete_combat_chase_story_28_9_tests.rs  dice_resolver_story_34_3_tests.rs  drama_weight_story_5_3_tests.rs  edge_config_builder_story_39_3_tests.rs  edge_pool_story_39_1_tests.rs  edge_wiring_story_39_2_tests.rs  encounter_story_16_2_tests.rs  encumbrance_story_19_7_tests.rs  engagement_multiplier_story_6_3_tests.rs  equipment_generation_story_31_3_tests.rs  faction_agenda_story_6_4_tests.rs  faction_music_routing_story_16_15_tests.rs  (+91 more)
crates/sidequest-genre/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-genre/src/: archetype_resolve.rs  cache.rs  error.rs  genre_code.rs  lib.rs  loader.rs  markov.rs  models.rs  names.rs  resolve.rs  util.rs  validate.rs
crates/sidequest-genre/tests/: advancement_effects_story_39_5_tests.rs  archetype_axes_test.rs  archetype_integration_test.rs  archetype_resolve_test.rs  backstory_tables_wiring_story_31_2_tests.rs  beatdef_edge_fields_story_39_4_tests.rs  confrontation_def_story_16_3_tests.rs  edge_config_story_39_3_tests.rs  equipment_tables_wiring_story_31_3_tests.rs  genre_thresholds_story_5_8_tests.rs  hierarchical_graph_story_23_3_tests.rs  hit_severity_story_38_7_tests.rs  (+19 more)
crates/sidequest-loadoutgen/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-namegen/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-promptpreview/: CLAUDE.md  Cargo.toml
crates/sidequest-protocol/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-server/: CLAUDE.md  Cargo.toml  README.md
crates/sidequest-telemetry/: CLAUDE.md  Cargo.toml
crates/sidequest-test-support/: Cargo.toml  README.md
crates/sidequest-validate/: CLAUDE.md  Cargo.toml
(+358 files in other folders)
