[workspace]
members = [
    "crates/sidequest-protocol",
    "crates/sidequest-genre",
    "crates/sidequest-game",
    "crates/sidequest-agents",
    "crates/sidequest-server",
    "crates/sidequest-daemon-client",
    "crates/sidequest-namegen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "SideQuest game engine — AI Narrator powered by coordinated Claude agents"
repository = "https://github.com/slabgorb/sidequest-api"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP framework and WebSocket
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-chrome = "0.7"

# CLI arguments
clap = { version = "4.5", features = ["derive"] }

# UUIDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

# Futures
futures = "0.3"

# Regex (for input sanitization)
regex = "1.10"

# Ordered floats for hashing
ordered-float = { version = "4", features = ["serde"] }

