[package]
name = "sidequest-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sidequest-protocol = { path = "../sidequest-protocol" }
sidequest-game = { path = "../sidequest-game" }
sidequest-genre = { path = "../sidequest-genre" }
sidequest-telemetry = { path = "../sidequest-telemetry" }
tokio = { workspace = true, features = ["process", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sidequest-genre = { path = "../sidequest-genre" }
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
# Serial test execution for tests that share the global telemetry channel
# (subscribe_global / init_global_channel) — without isolation, parallel test
# runs pollute each other's broadcast receiver and produce flaky failures.
serial_test = "3"
