[package]
name = "sidequest-daemon-client"
version.workspace = true
edition.workspace = true
description = "Client for communicating with sidequest-daemon over Unix socket"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
