[package]
name = "sidequest-fixture"
version.workspace = true
edition.workspace = true
description = "Scene harness fixture loader — hydrate GameSnapshot from YAML for dev iteration"

[dependencies]
sidequest-game = { path = "../sidequest-game" }
sidequest-genre = { path = "../sidequest-genre" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "sidequest-fixture"
path = "src/bin/sidequest-fixture.rs"
