[package]
name = "sidequest-game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sidequest-protocol = { path = "../sidequest-protocol" }
sidequest-genre = { path = "../sidequest-genre" }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
