[package]
name = "sidequest-game"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sidequest-protocol = { path = "../sidequest-protocol" }
sidequest-genre = { path = "../sidequest-genre" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
ordered-float = { workspace = true }
base64 = "0.22"
regex = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }
rand = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true }
