[package]
name = "sidequest-genre"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sidequest-protocol = { path = "../sidequest-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
