[package]
name = "sidequest-namegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "NPC identity generator — culture names, archetype personalities, OCEAN profiles"

[[bin]]
name = "sidequest-namegen"
path = "src/main.rs"

[dependencies]
sidequest-genre = { path = "../sidequest-genre" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
