[package]
name = "sidequest-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true

[lib]
name = "sidequest_server"
path = "src/lib.rs"

[[bin]]
name = "sidequest-server"
path = "src/main.rs"

[dependencies]
sidequest-protocol = { path = "../sidequest-protocol" }
sidequest-genre = { path = "../sidequest-genre" }
sidequest-game = { path = "../sidequest-game" }
sidequest-agents = { path = "../sidequest-agents" }
sidequest-daemon-client = { path = "../sidequest-daemon-client" }
sidequest-telemetry = { path = "../sidequest-telemetry" }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "5"
tracing-subscriber = { workspace = true }
tracing-chrome = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
serde_yaml = { workspace = true }
