[package]
name = "sidequest-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Game telemetry — WatcherEvent types, global broadcast channel, watcher! macro"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
